--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         margin: auto;
         max-width: 1300px;
         min-height: 100vh;
-        background-color: black;
+        background-color: rgb(250, 250, 250);
         box-shadow: 0 0 20px grey;
       }
 
